tma/errors.txt
rm -f main.o  main
nvcc -c --generate-code=arch=compute_90a,code=[compute_90a] -std=c++17 -O3 -Xcompiler=-Wno-psabi -Xcompiler=-fno-strict-aliasing -I/root/zyhuang/pure_cutlass/cutlass-main/include -I/root/zyhuang/pure_cutlass/cutlass-main/examples/common -I/root/zyhuang/pure_cutlass/cutlass-main/tools/util/include -I../include/utils --expt-relaxed-constexpr -o "main.o" main.cu
tma_copy_multicast.h(535): warning #177-D: variable "kernel" was declared but never referenced
      void const* kernel = nullptr;
                  ^

Remark: The warnings can be suppressed with "-diag-suppress <warning-number>"

/root/zyhuang/pure_cutlass/cutlass-main/include/cute/atom/copy_traits_sm90_tma.hpp(148): error: static assertion failed
      static_assert(is_congruent<decltype(g_shape), decltype(aux_params_.g_stride_)>::value);
      ^
          detected during:
            instantiation of "auto cute::Copy_Traits<cute::SM90_TMA_LOAD, NumBitsPerTMA, AuxParams_>::get_tma_tensor(const GShape &) const [with NumBitsPerTMA=cute::C<131072>, AuxParams_=cute::AuxTmaParams<cute::tuple<cute::ScaledBasis<cute::C<1>, 1>, cute::ScaledBasis<cute::C<1>, 0>, cute::ScaledBasis<cute::C<1>, 2>>, const cute::Layout<cute::tuple<cute::_64, cute::_128, cute::_1>, cute::tuple<cute::ScaledBasis<cute::C<1>, 1>, cute::ScaledBasis<cute::C<1>, 0>, cute::ScaledBasis<cute::C<1>, 2>>> &, const cute::Swizzle<3, 4, 3> &>, GShape=cute::tuple<int, int>]" at line 300 of tma_copy_multicast.h
            instantiation of "void copyTMAKernelNoMulticast<copy_mode,kNumThreads,Element,Params>(Params) [with copy_mode=0, kNumThreads=128, Element=cutlass::half_t, Params=ParamsMulticast<cute::TiledCopy<cute::Copy_Atom<cute::Copy_Traits<cute::SM90_TMA_LOAD, cute::C<131072>, cute::AuxTmaParams<cute::tuple<cute::ScaledBasis<cute::C<1>, 1>, cute::ScaledBasis<cute::C<1>, 0>>, const cute::Layout<cute::tuple<cute::_64, cute::_128>, cute::tuple<cute::ScaledBasis<cute::C<1>, 1>, cute::ScaledBasis<cute::C<1>, 0>>> &, const cute::Swizzle<3, 4, 3> &>>, cutlass::half_t>, cute::Layout<cute::tuple<cute::_1, cute::tuple<cute::tuple<cute::tuple<cute::_64, cute::_128>, cute::_2>>>, cute::tuple<cute::C<0>, cute::tuple<cute::tuple<cute::tuple<cute::_128, cute::_1>, cute::C<8192>>>>>, cute::tuple<cute::_128, cute::_128>>, cute::TiledCopy<cute::Copy_Atom<cute::Copy_Traits<cute::SM90_TMA_LOAD, cute::C<131072>, cute::AuxTmaParams<cute::tuple<cute::ScaledBasis<cute::C<1>, 1>, cute::ScaledBasis<cute::C<1>, 0>, cute::ScaledBasis<cute::C<1>, 2>>, const cute::Layout<cute::tuple<cute::_64, cute::_128, cute::_1>, cute::tuple<cute::ScaledBasis<cute::C<1>, 1>, cute::ScaledBasis<cute::C<1>, 0>, cute::ScaledBasis<cute::C<1>, 2>>> &, const cute::Swizzle<3, 4, 3> &>>, cutlass::half_t>, cute::Layout<cute::tuple<cute::_1, cute::tuple<cute::tuple<cute::tuple<cute::_64, cute::_128>, cute::_2>>>, cute::tuple<cute::C<0>, cute::tuple<cute::tuple<cute::tuple<cute::_128, cute::_1>, cute::C<8192>>>>>, cute::tuple<cute::_128, cute::_128>>, cute::Layout<cute::tuple<int, int>, cute::tuple<int, cute::_1>>, cute::Layout<cute::tuple<int, int, cute::C<2>>, cute::tuple<int, cute::_1, int>>, cute::ComposedLayout<cute::Swizzle<3, 4, 3>, cute::smem_ptr_flag_bits<16>, cute::Layout<cute::tuple<cute::tuple<cute::C<8>, cute::C<16>>, cute::tuple<cute::_64, cute::_2>>, cute::tuple<cute::tuple<cute::_64, cute::_512>, cute::tuple<cute::_1, cute::C<8192>>>>>, cute::tuple<cute::_128, cute::_128>, cute::tuple<cute::_1, cute::_1, cute::_2>>]" at line 538 of tma_copy_multicast.h
            instantiation of "int copy_host_tma_load_and_store_kernel_multicast(int, int, int, int) [with use_multicast=false, COPYN=2, TILE_M=128, TILE_N=128, THREADS=128]" at line 43 of main.cu

/root/zyhuang/pure_cutlass/cutlass-main/include/cute/stride.hpp(116): error: static assertion failed with "Mismatched Ranks"
        static_assert(tuple_size<Shape>::value == tuple_size<Stride>::value, "Mismatched Ranks");
        ^
          detected during:
            instantiation of "auto cute::crd2idx(const Coord &, const Shape &, const Stride &) [with Coord=int, Shape=cute::tuple<int, int>, Stride=cute::tuple<cute::ScaledBasis<cute::C<1>, 1>, cute::ScaledBasis<cute::C<1>, 0>, cute::ScaledBasis<cute::C<1>, 2>>]" at line 171 of /root/zyhuang/pure_cutlass/cutlass-main/include/cute/layout.hpp
            instantiation of "auto cute::Layout<Shape, Stride>::operator()(const Coord &) const [with Shape=cute::tuple<int, int>, Stride=cute::tuple<cute::ScaledBasis<cute::C<1>, 1>, cute::ScaledBasis<cute::C<1>, 0>, cute::ScaledBasis<cute::C<1>, 2>>, Coord=int]" at line 643 of /root/zyhuang/pure_cutlass/cutlass-main/include/cute/layout.hpp
            instantiation of "auto cute::coshape<Is...,Shape,Stride>(const cute::Layout<Shape, Stride> &) [with Is=<>, Shape=cute::tuple<int, int>, Stride=cute::tuple<cute::ScaledBasis<cute::C<1>, 1>, cute::ScaledBasis<cute::C<1>, 0>, cute::ScaledBasis<cute::C<1>, 2>>]" at line 484 of /root/zyhuang/pure_cutlass/cutlass-main/include/cute/tensor_impl.hpp
            instantiation of "auto cute::make_counting_tensor(const Layout &) [with Layout=cute::Layout<cute::tuple<int, int>, cute::tuple<cute::ScaledBasis<cute::C<1>, 1>, cute::ScaledBasis<cute::C<1>, 0>, cute::ScaledBasis<cute::C<1>, 2>>>, <unnamed>=(void *)nullptr]" at line 149 of /root/zyhuang/pure_cutlass/cutlass-main/include/cute/atom/copy_traits_sm90_tma.hpp
            instantiation of "auto cute::Copy_Traits<cute::SM90_TMA_LOAD, NumBitsPerTMA, AuxParams_>::get_tma_tensor(const GShape &) const [with NumBitsPerTMA=cute::C<131072>, AuxParams_=cute::AuxTmaParams<cute::tuple<cute::ScaledBasis<cute::C<1>, 1>, cute::ScaledBasis<cute::C<1>, 0>, cute::ScaledBasis<cute::C<1>, 2>>, const cute::Layout<cute::tuple<cute::_64, cute::_128, cute::_1>, cute::tuple<cute::ScaledBasis<cute::C<1>, 1>, cute::ScaledBasis<cute::C<1>, 0>, cute::ScaledBasis<cute::C<1>, 2>>> &, const cute::Swizzle<3, 4, 3> &>, GShape=cute::tuple<int, int>]" at line 300 of tma_copy_multicast.h
            instantiation of "void copyTMAKernelNoMulticast<copy_mode,kNumThreads,Element,Params>(Params) [with copy_mode=0, kNumThreads=128, Element=cutlass::half_t, Params=ParamsMulticast<cute::TiledCopy<cute::Copy_Atom<cute::Copy_Traits<cute::SM90_TMA_LOAD, cute::C<131072>, cute::AuxTmaParams<cute::tuple<cute::ScaledBasis<cute::C<1>, 1>, cute::ScaledBasis<cute::C<1>, 0>>, const cute::Layout<cute::tuple<cute::_64, cute::_128>, cute::tuple<cute::ScaledBasis<cute::C<1>, 1>, cute::ScaledBasis<cute::C<1>, 0>>> &, const cute::Swizzle<3, 4, 3> &>>, cutlass::half_t>, cute::Layout<cute::tuple<cute::_1, cute::tuple<cute::tuple<cute::tuple<cute::_64, cute::_128>, cute::_2>>>, cute::tuple<cute::C<0>, cute::tuple<cute::tuple<cute::tuple<cute::_128, cute::_1>, cute::C<8192>>>>>, cute::tuple<cute::_128, cute::_128>>, cute::TiledCopy<cute::Copy_Atom<cute::Copy_Traits<cute::SM90_TMA_LOAD, cute::C<131072>, cute::AuxTmaParams<cute::tuple<cute::ScaledBasis<cute::C<1>, 1>, cute::ScaledBasis<cute::C<1>, 0>, cute::ScaledBasis<cute::C<1>, 2>>, const cute::Layout<cute::tuple<cute::_64, cute::_128, cute::_1>, cute::tuple<cute::ScaledBasis<cute::C<1>, 1>, cute::ScaledBasis<cute::C<1>, 0>, cute::ScaledBasis<cute::C<1>, 2>>> &, const cute::Swizzle<3, 4, 3> &>>, cutlass::half_t>, cute::Layout<cute::tuple<cute::_1, cute::tuple<cute::tuple<cute::tuple<cute::_64, cute::_128>, cute::_2>>>, cute::tuple<cute::C<0>, cute::tuple<cute::tuple<cute::tuple<cute::_128, cute::_1>, cute::C<8192>>>>>, cute::tuple<cute::_128, cute::_128>>, cute::Layout<cute::tuple<int, int>, cute::tuple<int, cute::_1>>, cute::Layout<cute::tuple<int, int, cute::C<2>>, cute::tuple<int, cute::_1, int>>, cute::ComposedLayout<cute::Swizzle<3, 4, 3>, cute::smem_ptr_flag_bits<16>, cute::Layout<cute::tuple<cute::tuple<cute::C<8>, cute::C<16>>, cute::tuple<cute::_64, cute::_2>>, cute::tuple<cute::tuple<cute::_64, cute::_512>, cute::tuple<cute::_1, cute::C<8192>>>>>, cute::tuple<cute::_128, cute::_128>, cute::tuple<cute::_1, cute::_1, cute::_2>>]" at line 538 of tma_copy_multicast.h
            instantiation of "int copy_host_tma_load_and_store_kernel_multicast(int, int, int, int) [with use_multicast=false, COPYN=2, TILE_M=128, TILE_N=128, THREADS=128]" at line 43 of main.cu

2 errors detected in the compilation of "main.cu".
make: *** [Makefile:22: main.o] Error 1
